# pc_build_ml_ops

./: .dockerignore  .dvcignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  EDA.ipynb  README.md  app.py  compose.yaml  docker-compose.yml  format_code.py  model_results_gpt-3.5-turbo.json  model_results_gpt-4o-mini.json  model_results_gpt-4o.json  mypy.ini  pc_accessories.db  pc_accessories_2.db  pyproject.toml  requirements-dev.txt  requirements.txt  run_isort.bat  test.ipynb
.github/workflows/: build.yml  ci-cd.yml  lint.yml  test.yml
.venv_new/: pyvenv.cfg
.venv_new/Scripts/: activate  pygrun  (+6 more)
app/: __init__.py
configs/: api_service.yml  config.yml
data/: .gitignore  cpu.csv.dvc  cpu_ratings.csv.dvc  csv_files.dvc  csv_perifi.dvc  databases.dvc  gpu_average_prices.csv.dvc
evaluation_results/: .gitignore  model_evaluation_20250518_162308.yml  model_evaluation_20250518_163406.yml  model_evaluation_20250518_221608.yml  model_evaluation_20250608_225719.yml  model_evaluation_20250609_002554.yml  model_evaluation_20250609_005306.yml  model_evaluation_20250609_011314.yml  summary_report.md  token_analysis_20250518_163434.yml  token_analysis_20250518_221616.yml  token_analysis_20250608_225732.yml
memory/: 2025-01-20.csv
model_comparison/: comparison_report.md  model_comparison.csv  model_comparison_report.html
outputs/: gpt-4_output.txt  gpt-4o-mini_output.txt
reports/: api_benchmark_results.csv  api_benchmark_results.json  comparison_report.md  metrics_summary.csv  response_lengths.csv
scripts/: benchmark.py  benchmark_api.py  evaluate_containers.py
src/: api_service.py  app.py  chat_backend.py  compare_models.py  db_validator.py  generate_report.py  load_config.py  mlflow_experiments.py  model_evaluator.py  token_counter.py  visualization.py
tests/: __init__.py  conftest.py  test_basic.py
validation_results/: pc_accessories_2_validation_20250518_155227.html  pc_accessories_2_validation_20250518_155227.json  pc_accessories_2_validation_20250518_155227.yml
(+126 files in other folders)
